mission-vision extra gap fixed on Mobile view

--- a/src/pages/home/style.css
+++ b/src/pages/home/style.css
@@ -25,6 +25,9 @@
   #info_mob > div {
     width: 100% !important;
   }
+  .mission{
+    height: unset !important;
+  }
 }
 .container {
   margin-top: 20px;
